--- a/style.css
+++ b/style.css
@@ -37,3 +37,12 @@ body{
     font-size: 45px;
     text-decoration: none;
 }
+#about{
+    color: red;
+}
+#faq{
+    color: red;
+}
+#social{
+    color:red;
+}
